@@ -1,5 +1,5 @@
 DIST maven-plugin-descriptor-2.1_pre20070611-gen-src.tar.bz2 5975 RMD160 cdebac633baef17eb2cb4b195ff736a731b19ca4 SHA1 670db84b0f82051f8ae0e4c6b2bd46d351470b17 SHA256 a734b10e933ad95acc34a9952ed84be0da7fb8731ef045c20d9cdc0ac92af5ef
 DIST maven-plugin-descriptor-2.1_pre20070611.tar.bz2 14702 RMD160 f3e848e3881f746bdf8b87bd0e66692f0ba5db81 SHA1 96546bfaa9ac89f7de7c0d0145664a69c4a7e00c SHA256 92ef61de7e2bc01a2fa2aa705b220d98ee2953b85cc9ae532075416f78933e9e
-EBUILD maven-plugin-descriptor-2.1_pre20070611.ebuild 843 RMD160 ac3db3f8d1b27a53530fe9b516905e4fb7f3c6c3 SHA1 dd82f59f61107a4c8cd8627e94bf8e6ba31d4fe4 SHA256 e299acaca2c9a339beb0d0827b2efc153ada9b71584158d08ffb4d397aa81a47
-MISC ChangeLog 777 RMD160 e521c84f1d1b4c57a234452df90e6bd93d873293 SHA1 d5478f5e4e237cefc4606fdb72fd700c9095932c SHA256 91e5c647bc580ff8c056b0617611f9d49cb6d4eb8b6a0600ce3e438d69a08012
+EBUILD maven-plugin-descriptor-2.1_pre20070611.ebuild 945 RMD160 729904c084c8306fc185a803079d4e1ec1f6fcd0 SHA1 230a97176b6cd4431d2e30f9ff1f24143f8f072d SHA256 7b5a3f52aca6582620469e48a810b064edb4885f72907b050e1693451edc30a4
+MISC ChangeLog 888 RMD160 db0448ab2b9e0fadd0c6ccc145f09daeb496ffff SHA1 2c7ef2b9339629a3255dfff7f3b25fec58de015f SHA256 41b31aaa85aebb3b4b87943f0077a39cb00297eaf1ff590d7c6568e475c4928c
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
